added different definitions of number of jumps

--- a/CTBN/CTBN/CMakeLists.txt
+++ b/CTBN/CTBN/CMakeLists.txt
@@ -2,8 +2,9 @@
 # tutaj logikę specyficzną dla projektu.
 #
 cmake_minimum_required (VERSION 3.8)
-
+add_library(Parameters "utils/parameters.cpp" "utils/parameters.h")
+target_link_libraries(Parameters)
 # Dodaj źródło do pliku wykonywalnego tego projektu.
 add_executable (CTBN "CTBN.cpp" "CTBN.h")
-
+target_link_libraries(CTBN PUBLIC Parameters)
 # TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
